--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@payloadcms/db-mongodb": "3.0.0-beta.67",
     "@payloadcms/next": "3.0.0-beta.67",
-    "@payloadcms/plugin-cloud": "3.0.0-beta.67",
+    "@payloadcms/plugin-cloud": "^3.0.2",
     "@payloadcms/richtext-lexical": "3.0.0-beta.67",
     "@payloadcms/storage-s3": "3.0.0-beta.67",
     "cross-env": "^7.0.3",
@@ -32,8 +32,11 @@
     "@types/node": "^20.14.9",
     "@types/react": "npm:types-react@19.0.0-rc.0",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "15.0.0-canary.104",
+    "postcss": "^8.4.45",
+    "tailwindcss": "^3.4.10",
     "typescript": "5.5.4"
   },
   "engines": {
